# static_library_hidden_test

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  hide_symbol.sh
inc/: common.h  tutu1.h  tutu2.h  tutu3.h
src/: tutu1.c  tutu2.c  tutu3.c
test/: Makefile  test.c
